post_show.html finished

--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 			class="element-divider"></span> <a class="element1 pull-menu"
 			href="#"></a>
 		<ul class="element-menu">
-			<li><a class="dropdown-toggle" href="#">登录</a></li>
+			<li id="login-menu"><a class="dropdown-toggle" href="#">登录</a></li>
 		</ul>
 	</div>
 </div>
