--- a/post_show.html
+++ b/post_show.html
@@ -29,15 +29,32 @@
 <script src="js/github.info.js"></script>
 
 <script>
-$.get("api.php",{"mod":"post","api":"show","id":"53d491e13258436c2000002d"},function (data) {
+$.extend({
+  getUrlVars: function(){
+    var vars = [], hash;
+    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+    for(var i = 0; i < hashes.length; i++)
+    {
+      hash = hashes[i].split('=');
+      vars.push(hash[0]);
+      vars[hash[0]] = hash[1];
+    }
+    return vars;
+  },
+  getUrlVar: function(name){
+    return $.getUrlVars()[name];
+  }
+});
+$.get("api.php",{"mod":"post","api":"show","id":$.getUrlVar("id")},function (data) {
 	console.log("req finished");
+	$("#doc-title").html(data.title+" - "+data.author.nick);
 	$("#title").html(data.title);
 	$("#subtitle").html(data.author.nick);
 	$("#context").html(data.text_html);
 },"json");
 </script>
 
-<title>ToiletCrazy</title>
+<title id="doc-title">ToiletCrazy</title>
 <style>
 </style>
 </head>
