front end finished additional message: use MarkdownExtra to parse posts

--- a/header.html
+++ b/header.html
@@ -1,10 +1,12 @@
 <div class="navigation-bar">
 	<div class="navigation-bar-content container">
-		<a href="/" class="element"><span></span>ToiletCrazy</a> <span
+		<a href="index.html" class="element"><span></span>ToiletCrazy</a> <span
 			class="element-divider"></span> <a class="element1 pull-menu"
 			href="#"></a>
 		<ul class="element-menu">
-			<li id="login-menu"><a class="dropdown-toggle" href="#">登录</a></li>
+			<li id="login-menu"><a class="dropdown-toggle" href="post.html">发文</a></li>
+			<li id="login-menu"><a class="dropdown-toggle" href="login.html">登录</a></li>
+			<li id="login-menu"><a class="dropdown-toggle" href="reg.html">注册</a></li>
 		</ul>
 	</div>
 </div>
